# process-management

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  make.sh
lib/: case_study.cpp  case_study.hpp  case_study_setup.cpp  case_study_setup.hpp  common_setup.hpp  generals.cpp  generals.hpp  past_ctl.hpp  process_common.hpp  process_management.cpp  process_management.hpp  process_utils.hpp  replicated.hpp  simulation_setup.cpp  simulation_setup.hpp  slcs.hpp  spherical_process.hpp  termination.hpp  tree_process.hpp  xc_processes.cpp  xc_processes.hpp  xc_setup.cpp  xc_setup.hpp
plot/: bloom batch.asy  sphere batch.asy  tree batch.asy
run/: batch.cpp  case_study.cpp  graphic.cpp  replicated_pastctl.cpp  spherical_process.cpp  tree_process.cpp  xcgraphic.cpp
